# ProtienFlex

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  blog_post.md  demo.py  docker-compose.yml  environment-base.yml  environment-core.yml  environment.yml  fetch_pdb_info.py  notes.txt  pdb7bbv.ent  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.txt  test_app.py  test_integration.py  test_sequence.py
.github/workflows/: ci.yml  main.yml
docs/: README.md
docs/api/: optimization.md
docs/architecture/: overview.md
docs/benchmarks/: README.md
docs/deployment/: configuration.md  monitoring.md  setup.md
docs/enhancements/: ARCHITECTURE.md  README.md  multimodal_integration.md  multimodal_todo.md
docs/examples/: README.md
docs/features/: advanced_features.md
docs/optimization/: adaptive_processing.md  memory_management.md  performance_monitoring.md
docs/techniques/: advanced_sampling.md  sampling_analysis.md
models/: __init__.py  domain_analysis.py  domain_predictor.py  drug_binding.py  drug_discovery.py  dynamics_integrator.py  esm_utils.py  mutation_analysis.py  nlp_analysis.py  openmm_utils.py  protein_llm.py  qa_system.py  sequence_optimizer.py  structure_visualizer.py
models/analysis/: __init__.py  domain_analysis.py  drug_binding.py  drug_discovery.py  enhanced_sequence_analyzer.py  function_predictor.py  multimodal_integrator.py  nlp_analysis.py  qa_system.py  sequence_analyzer.py  structure_predictor.py
models/dynamics/: __init__.py  analysis.py  simulation.py  validation.py
models/flexibility/: __init__.py  backbone_flexibility.py  domain_movements.py  sidechain_mobility.py
models/generative/: __init__.py  api_integration.py  concept_bottleneck.py  graph_attention.py  protein_generator.py  protein_llm.py  protein_tokenizer.py  structure_generator.py  structure_predictor.py  text_to_protein.py  text_to_protein_generator.py  unified_model.py  virtual_screening.py
models/optimization/: checkpointing.py  data_handler.py  gpu_manager.py  progress_tracker.py
models/optimizers/: adaptive_processor.py  memory_manager.py  performance_monitor.py
models/pipeline/: __init__.py  analysis_pipeline.py  flexibility_pipeline.py
models/prediction/: __init__.py  alphafold_interface.py  structure_converter.py
models/sampling/: __init__.py  attention_based_sampler.py  confidence_guided_sampler.py  energy_based_sampler.py  graph_based_sampler.py
models/utils/: esm_utils.py  openmm_utils.py
proteinflex/: __init__.py
proteinflex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
proteinflex/models/: __init__.py  mutation_analysis.py
proteinflex/models/analysis/: __init__.py  domain_analysis.py  domain_analysis.py.bak  drug_binding.py  drug_binding.py.bak  drug_discovery.py  mutation_analysis.py  mutation_analysis.py.bak  nlp_analysis.py  nlp_analysis.py.bak  qa_system.py  sequence_analyzer.py
proteinflex/models/dynamics/: __init__.py  simulation.py  simulation.py.bak
proteinflex/models/generative/: __init__.py  protein_generator.py  protein_generator.py.bak  protein_interface.py  protein_interface.py.bak  protein_llm.py  protein_llm.py.bak
proteinflex/models/utils/: esm_utils.py  esm_utils.py.bak  lazy_imports.py  mock_imports.py  openmm_utils.py  openmm_utils.py.bak
research/: README.md
research/papers/: advanced_sampling_techniques.md  protein_generation_advances.md
src/: data_preprocessing.py  main.py  model_training.py  nlp_processing.py  virtual_screening.py
static/css/: drug_discovery.css  qa_styles.css  style.css
static/js/: drug_discovery.js  main.js  visualization.js
templates/: index.html
tests/: conftest.py  conftest_init.py  test_api_integration.py  test_data_preprocessing.py  test_domain_analysis.py  test_domain_analysis_unittest.py  test_drug_binding.py  test_drug_discovery.py  test_dynamics.py  test_dynamics_edge_cases.py  test_dynamics_new.py  test_esm_utils.py  test_generative.py  test_model_training.py  test_mutation_analysis.py  test_mutation_analysis_edge_cases.py  test_mutation_analysis_new.py  test_nlp_analysis.py  test_nlp_processing.py  test_openmm_utils.py  test_protein_generator.py  test_protein_llm.py  test_qa_system.py  test_sequence_analyzer.py  test_text_to_protein.py  test_unified_model.py  test_virtual_screening.py
tests/analysis/: test_multimodal_integration.py
tests/generative/: test_concept_bottleneck.py  test_graph_attention.py  test_protein_generator.py  test_structure_generator.py
tests/imports/: test_imports.py
tests/integration/: test_optimization_pipeline.py  test_performance_benchmarks.py  test_pipeline.py  test_protein_validation.py
tests/optimizers/: test_adaptive_processor.py  test_memory_manager.py  test_performance_monitor.py
tests/sampling/: test_attention_based_sampler.py  test_confidence_guided_sampler.py  test_energy_based_sampler.py  test_graph_based_sampler.py
tests/unit/: test_dynamics.py  test_flexibility.py  test_prediction.py
tests/utils/: __init__.py  env_setup.py  mock_base.py  mock_forces.py  mock_numpy.py  mock_objects.py  mock_openmm.py  mock_quantity.py  mock_topology.py
