[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinflex"
version = "1.0.0"
description = "AI-driven protein development and analysis toolkit"
authors = [
    {name = "VishwamAI", email = "contact@vishwamai.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch==1.13.1",
    "numpy==1.23.5",
    "scipy==1.9.3",
    "pandas==1.5.3",
    "scikit-learn==1.0.2",
    "biopython==1.80",
    "mdtraj==1.9.7",
    "prody==2.0.0",
    "requests==2.31.0",
    "tqdm==4.66.0",
    "matplotlib==3.6.2",
    "seaborn==0.12.2",
    "transformers==4.25.1",
    "tokenizers==0.13.2",
    "openmm==7.7.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "pytest-mock==3.10.0",
    "pytest-asyncio==0.20.3",
    "pytest-timeout==2.1.0",
    "pytest-xdist==3.1.0",
    "pytest-env==0.8.1",
    "pytest-randomly==3.12.0",
    "coverage==6.5.0",
    "flake8==5.0.4",
    "mock==5.0.1"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/VishwamAI/ProtienFlex"
Repository = "https://github.com/VishwamAI/ProtienFlex.git"
Documentation = "https://proteinflex.readthedocs.io"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=proteinflex"
testpaths = ["tests"]
