[metadata]
name = proteinflex
version = 0.1.0
description = A Python package for protein structure analysis and drug discovery
author = VishwamAI

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=2.0.0
    fair-esm>=2.0.0
    numpy>=1.20.0
    biopython>=1.79
    rdkit>=2022.9.5
    openmm>=8.0.0
    mdtraj>=1.9.7
    biotite>=0.35.0
    transformers>=4.30.0

[options.packages.find]
where = .
include = proteinflex*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = -v --import-mode=importlib
